<resources>
    <string name="app_name">Notecook</string>
    <string name="type_in_your_comma_separated_list_of_available_ingredients">Type in your comma-separated list of available ingredients.</string>
    <string name="dummy_string">Detailed view coming soon!</string>


    <string name="apps_name">newkkh</string>
<!--    <string name="ingredient_list">Recipe Steps: (separated by new line)</string>
    <string name="ingredient_lists">Ingredients List: (separated by new line)</string>-->
    <string name="time_text">m</string>
    <string name="capture_image">CAPTURE IMAGE</string>
    <string name="title_description">Recipe Title</string>
    <string name="time_description">Cook time</string>
    <string name="notecook">Time:</string>
    <string name="sign_up">POST</string>
    <string name="album_description">Recipe steps (separated by new line)</string>
    <string name="albums_description">Ingredients list (separated by new line)</string>


</resources>